--- a/tour-place.html
+++ b/tour-place.html
@@ -130,8 +130,14 @@
 													<div class="col-md-6 col-sm-6">
 														<div class="desc">
 															<span class="day-tour">Day 1</span>
-															<h2>Athens, Greece</h2>
-															<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+															<h2>Marina Beach</h2>
+															<p>Tired of the sweltering heat of Chennai? Let the Marina Beach be a sweet escape spot for you. Beaches in Chennai along the Bay of Bengal coast, it happens to be the longest beach in India and one of the longest in the world. Got enough time to pay a visit to this amazing place during the morning or evening? We suggest that you should not miss out on experiencing the enthralling view of the sun setting or rising from the beach. You may shop for trinkets such as imitation jewellery, shell mementos from the stalls on the beach side. Among the best places to visit in Chennai with friends, it is perfect to build sand castles or play games like beach volleyball.
+<br>
+																Timings: All through the day
+																<br>
+																Explore recommended places to stay in Chennai at best price
+																
+																</p>
 														</div>
 													</div>
 												</div>
@@ -147,8 +153,12 @@
 													<div class="col-md-6 col-sm-6">
 														<div class="desc">
 															<span class="day-tour">Day 2</span>
-															<h2>Thailand</h2>
-															<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+															<h2>Valluvar Kottam</h2>
+															<p>Those of you who love literature must have heard or read about the famous Tamil poet and saint, Thiruvalluvar. For the uninformed, Thiruvalluvar is hailed as one of the greatest Tamil scholars. Valluvar Kottam is an intricately designed chariot built in his honour. The magnificence of Valluvar Kottam can be best experienced early in the morning or when the sun is just setting. Wondering how to reach here? It is located at the intersection of Kodambakkam High Road and Village Road; taxis and buses can be taken from around the city.
+
+																Location: Nungambakkam Lake Area Main Road, Chennai
+																Timings: 8:30 am to 5:30 pm
+																Entry Fee: ₹ 5 (children); ₹ 10 (adults)</p>
 														</div>
 													</div>
 												</div>
@@ -164,8 +174,12 @@
 													<div class="col-md-6 col-sm-6">
 														<div class="desc">
 															<span class="day-tour">Day 3</span>
-															<h2>Boracay, Philippines</h2>
-															<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+															<h2>Thousand Lights Mosque</h2>
+															<p>This multi-domed mosque, which is a revered place of worship for Local Muslims, literally lights up the Royapettah area of Chennai. It is believed that in olden times, about 1000 lights were required to light up the hall of this mosque which is why it has been named as the Thousand Lights Mosque. As it goes without saying, this place looks absolutely spectacular all glowing: hence, is among the most popular places to visit in Chennai at night. With two minarets towering at a height of about 64 feet, this mosque exhibits the excellence of medieval architectural style.
+
+																Location: Royapettah, Peters Road, Peters Colony, Chennai
+																Timings: 5:30 am to 8:30 pm
+																Entry Fee: NA</p>
 														</div>
 													</div>
 												</div>
@@ -181,8 +195,10 @@
 													<div class="col-md-6 col-sm-6">
 														<div class="desc">
 															<span class="day-tour">Day 4</span>
-															<h2>Tokyo, Japan</h2>
-															<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+															<h2>Elliot’s Beach</h2>
+															<p>With Ashtalakshmi Kovil in its vicinity, Elliot’s Beach is a famous place to visit with friends or family. This beautiful beach, which was named after Edward Elliot (the Chief Magistrate, Superintendent of Madras during the British Era), is one of the cleanest seafronts in India. Sunbathe, relax and unwind, keeping the stress at bay at this extremely calm and scenic place. Featuring in the list of Chennai famous places for couples, this one is great for a moonlight walk.
+
+																Timings: All through the day</p>
 														</div>
 													</div>
 												</div>
