--- a/tours.html
+++ b/tours.html
@@ -119,12 +119,12 @@
 								<div class="col-md-6 col-sm-6 animate-box">
 									<div class="tour">
 										<a href="tour-place.html" class="tour-img" style="background-image: url(images/tour-1.jpg);">
-											<p class="price"><span>$1500</span> <small>/ 3 Days</small></p>
+											<p class="price"><span>1500</span> <small>/ 1 Days</small></p>
 										</a>
 										<span class="desc">
 											<p class="star"><span><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i></span> 545 Reviews</p>
-											<h2><a href="tour-place.html">Family Tour in Greece</a></h2>
-											<span class="city">Athens, Greece</span>
+											<h2><a href="tour-place.html">Family Tour in Chennai</a></h2>
+											<span class="city">Marina Beach</span>
 										</span>
 									</div>
 								</div>
@@ -132,12 +132,12 @@
 								<div class="col-md-6 col-sm-6 animate-box">
 									<div class="tour">
 										<a href="tour-place.html" class="tour-img" style="background-image: url(images/tour-2.jpg);">
-											<p class="price"><span>$1500</span> <small>/ 3 Days</small></p>
+											<p class="price"><span>1500</span> <small>/ 1 Days</small></p>
 										</a>
 										<span class="desc">
 											<p class="star"><span><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i></span> 545 Reviews</p>
-											<h2><a href="tour-place.html">Family Tour in Greece</a></h2>
-											<span class="city">Athens, Greece</span>
+											<h2><a href="tour-place.html">Family Tour in Chennai</a></h2>
+											<span class="city">Valluvar Kottam</span>
 										</span>
 									</div>
 								</div>
@@ -145,12 +145,12 @@
 								<div class="col-md-6 col-sm-6 animate-box">
 									<div class="tour">
 										<a href="tour-place.html" class="tour-img" style="background-image: url(images/tour-3.jpg);">
-											<p class="price"><span>$1500</span> <small>/ 3 Days</small></p>
+											<p class="price"><span>1500</span> <small>/ 1 Days</small></p>
 										</a>
 										<span class="desc">
 											<p class="star"><span><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i></span> 545 Reviews</p>
-											<h2><a href="tour-place.html">Family Tour in Greece</a></h2>
-											<span class="city">Athens, Greece</span>
+											<h2><a href="tour-place.html">Family Tour in Chennai</a></h2>
+											<span class="city">Thousand Lights Mosque</span>
 										</span>
 									</div>
 								</div>
@@ -158,12 +158,12 @@
 								<div class="col-md-6 col-sm-6 animate-box">
 									<div class="tour">
 										<a href="tour-place.html" class="tour-img" style="background-image: url(images/tour-4.jpg);">
-											<p class="price"><span>$1500</span> <small>/ 3 Days</small></p>
+											<p class="price"><span>1500</span> <small>/ 3 Days</small></p>
 										</a>
 										<span class="desc">
 											<p class="star"><span><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i></span> 545 Reviews</p>
-											<h2><a href="tour-place.html">Family Tour in Greece</a></h2>
-											<span class="city">Athens, Greece</span>
+											<h2><a href="tour-place.html">Family Tour in Chennai</a></h2>
+											<span class="city">Elliot’s Beach</span>
 										</span>
 									</div>
 								</div>
@@ -175,7 +175,7 @@
 										</a>
 										<span class="desc">
 											<p class="star"><span><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i></span> 545 Reviews</p>
-											<h2><a href="tour-place.html">Family Tour in Greece</a></h2>
+											<h2><a href="tour-place.html">Family Tour in Chennai</a></h2>
 											<span class="city">Athens, Greece</span>
 										</span>
 									</div>
@@ -188,7 +188,7 @@
 										</a>
 										<span class="desc">
 											<p class="star"><span><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i></span> 545 Reviews</p>
-											<h2><a href="tour-place.html">Family Tour in Greece</a></h2>
+											<h2><a href="tour-place.html">Family Tour in Chennai</a></h2>
 											<span class="city">Athens, Greece</span>
 										</span>
 									</div>
@@ -201,7 +201,7 @@
 										</a>
 										<span class="desc">
 											<p class="star"><span><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i></span> 545 Reviews</p>
-											<h2><a href="tour-place.html">Family Tour in Greece</a></h2>
+											<h2><a href="tour-place.html">Family Tour in Chennai</a></h2>
 											<span class="city">Athens, Greece</span>
 										</span>
 									</div>
@@ -214,7 +214,7 @@
 										</a>
 										<span class="desc">
 											<p class="star"><span><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i><i class="icon-star-full"></i></span> 545 Reviews</p>
-											<h2><a href="tour-place.html">Family Tour in Greece</a></h2>
+											<h2><a href="tour-place.html">Family Tour in Chennai</a></h2>
 											<span class="city">Athens, Greece</span>
 										</span>
 									</div>
