--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-xs-2">
-							<div id="colorlib-logo"><a href="index.html">Tour</a></div>
+							<div id="colorlib-logo"><a href="index.html">Chennai Tour</a></div>
 						</div>
 						<div class="col-xs-10 text-right menu-1">
 							<ul>
@@ -99,7 +99,7 @@
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12 slider-text">
 				   				<div class="slider-text-inner text-center">
-				   					<h2>by colorlib.com</h2>
+				   					<h2></h2>
 				   					<h1>Contact us</h1>
 				   				</div>
 				   			</div>
@@ -157,16 +157,16 @@
 						<h3>Contact Information</h3>
 						<div class="row contact-info-wrap">
 							<div class="col-md-3">
-								<p><span><i class="icon-location"></i></span> 198 West 21th Street, <br> Suite 721 New York NY 10016</p>
+								<p><span><i class="icon-location"></i></span>  Ranganadhapuram, Bus stop, 2nd floor,<br> Upstreas to Hero Sprint, Medavakkam, <br>Chennai, Tamil Nadu 600100</p>
 							</div>
 							<div class="col-md-3">
 								<p><span><i class="icon-phone3"></i></span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
 							</div>
 							<div class="col-md-3">
-								<p><span><i class="icon-paperplane"></i></span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+								<p><span><i class="icon-paperplane"></i></span> <a href="mailto:info@yoursite.com">Chennaitour@gmail.com</a></p>
 							</div>
 							<div class="col-md-3">
-								<p><span><i class="icon-globe"></i></span> <a href="#">yoursite.com</a></p>
+								<p><span><i class="icon-globe"></i></span> <a href="#">ChennaiTour.com</a></p>
 							</div>
 						</div>
 					</div>
@@ -250,10 +250,10 @@
 					<div class="col-md-3 col-md-push-1">
 						<h4>Contact Information</h4>
 						<ul class="colorlib-footer-links">
-							<li>291 South 21th Street, <br> Suite 721 New York NY 10016</li>
+							<li> Ranganadhapuram, Bus stop, 2nd floor,<br> Upstreas to Hero Sprint, Medavakkam,<br> Chennai, Tamil Nadu 600100</li>
 							<li><a href="tel://1234567920">+ 1235 2355 98</a></li>
-							<li><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
-							<li><a href="#">yoursite.com</a></li>
+							<li><a href="mailto:info@yoursite.com">Chennaitour@gmail.com</a></li>
+							<li><a href="#">ChennaiTour.com</a></li>
 						</ul>
 					</div>
 				</div>
