--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
 								<p><span><i class="icon-location"></i></span>  Ranganadhapuram, Bus stop, 2nd floor,<br> Upstreas to Hero Sprint, Medavakkam, <br>Chennai, Tamil Nadu 600100</p>
 							</div>
 							<div class="col-md-3">
-								<p><span><i class="icon-phone3"></i></span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+								<p><span><i class="icon-phone3"></i></span> <a href="tel://1234567920">+ 9750048622</a></p>
 							</div>
 							<div class="col-md-3">
 								<p><span><i class="icon-paperplane"></i></span> <a href="mailto:info@yoursite.com">Chennaitour@gmail.com</a></p>
